bk_ida/gccida/g0/emit_move_insn_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3276:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v4; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3281:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3284:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3289:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3303:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v31; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3311:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v39; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3313:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v41; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3325:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+34h] [rbp-ACh] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3334:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode reg_mode; // [rsp+78h] [rbp-68h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3339:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode submode; // [rsp+A4h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3340:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class classa; // [rsp+A8h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3341:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+ACh] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3352:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
classa = mode_class_0[*( ( unsigned __int8 *)x + 2)]; 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3357:6: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v2 = insn_data_0[optab_table[30]->handlers[*( ( unsigned __int8 *)x + 2)].insn_code].genfun( x, y); 
     ^~~~~~~~~~~
     insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3357:92: error: called object type '<dependent type>' is not a function or function pointer
v2 = insn_data_0[optab_table[30]->handlers[*( ( unsigned __int8 *)x + 2)].insn_code].genfun( x, y); 
                                                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3372:26: error: use of undeclared identifier 'machine_mode'
if ( !push_operand( x, ( machine_mode)*( ( unsigned __int8 *)x + 2)) ) 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3458:33: error: invalid suffix 'orce' on integer constant
ypart = operand_sub*(short *)0xforce( ya, i, mode); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3458:9: error: use of undeclared identifier 'operand_sub'
ypart = operand_sub*(short *)0xforce( ya, i, mode); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/expr.c:3475:28: error: use of undeclared identifier 'machine_mode'
stack = push_operand( x, ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_move_insn_1/src/obj/expr.o] Error 1
